# cadence

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
.tix/: issues.jsonl
examples/: config.toml
scripts/: install-launchd.sh
src/cadence/: __init__.py  ble.py  cli.py  config.py  logging_setup.py  notify.py  paths.py  presence.py  protocol.py  safety.py  scheduler.py  setup_wizard.py  state.py
tests/: test_captain.py  test_presence.py  test_protocol.py  test_scheduler.py  test_setup_wizard.py  test_state_config.py  test_working_hours_ble.py
